--- a/style.css
+++ b/style.css
@@ -3,3 +3,24 @@ body {
     padding: 0 !important;
     overflow: hidden;
 }
+
+canvas {
+    height: 100%;;
+}
+
+button {
+    background-color: rgba(255, 255, 255, 0.5);
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: rgba(255, 255, 255, 0.8);
+}
+
+.floating-button-container {
+    position: absolute;
+    top: 5px;
+    left: 5px;
+    z-index: 1000;
+}
